Depency class is added

--- a/productlist/src/main/resources/application.properties
+++ b/productlist/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=productlist
-spring.datasource.url=jdbc:h2:mem:testDB
+#spring.datasource.url=jdbc:h2:mem:testDB
+#spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=root123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
